[package]
name = "nannou-sketches"
version = "0.1.0"
authors = ["Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.13"

[[example]]
name = "dolphin"
path = "examples/dolphin.rs"
[[example]]
name = "boids"
path = "examples/boids.rs"
[[example]]
name = "kaleidoscope"
path = "examples/kaleidoscope.rs"
[[example]]
name = "worms"
path = "examples/worms.rs"
[[example]]
name = "hilbert"
path = "examples/hilbert.rs"