[package]
name = "sketches"
version = "0.1.0"
authors = ["Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
primes = "0.3"

[[example]]
name = "dolphin"
path = "examples/dolphin.rs"
[[example]]
name = "kaleidoscope"
path = "examples/kaleidoscope.rs"
[[example]]
name = "worms"
path = "examples/worms.rs"
[[example]]
name = "hilbert"
path = "examples/hilbert.rs"
[[example]]
name = "squares"
path = "examples/squares.rs"
[[example]]
name = "pendulum"
path = "examples/pendulum.rs"
[[example]]
name = "rings"
path = "examples/rings.rs"
[[example]]
name = "reveal"
path = "examples/reveal.rs"